bundle: Remove duplicate nativeAPIs, sort by multi-field comparator
Signed-off-by: Michael Edgar <medgar@redhat.com>